remove unused hashtagPrefixFilter
